2015-10-13  Katsumi Yamaoka  <yamaoka@jpl.org>

	* doc/txi-ja.tex: Make the pdf document display a bookmark by default.

2015-10-09  Katsumi Yamaoka  <yamaoka@jpl.org>

	* configure.in:
	* doc/Makefile.in (.texi.dvi): Use pbibtex rather than jbibtex.
	* doc/emacs-w3m-ja.texi: Add @usedvipdfmx to generate pdf bookmark.
	* doc/txi-ja.tex: Copy from <https://github.com/fukusaka/texinfo-ja/>.

2015-09-29  Kevin Ryde  <user42_kevin@yahoo.com.au>

	* w3m.el (w3m-check-header-tags): w3m-expand-url <base> to tolerate
	a non-absolute there, as for example from archive.org.
	(If w3m-current-base-url is relative then form setups error out.)

2015-06-09  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-retrieve-and-render):
	Set w3m-current-url (and w3m-current-title) so as to enable moving back
	to the past page (in the case w3m-clear-display-while-reading is t).
	(w3m-goto-url): Don't move point to the top when it failed to retrieve.
	[emacs-w3m:12471]

2015-06-02  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-retrieve-and-render):
	Don't display progress message for `about:' pages.  [emacs-w3m:12465]

2015-05-22  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-refresh-at-time): Remove workaround.  [emacs-w3m:12459]

2015-05-13  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-use-refresh): Mention Google looping problem in docstring.
	(w3m-refresh-minimum-interval): Default to 5; change the meaning.
	(w3m-check-refresh-attribute, w3m-view-previous-page):
	Do nothing for w3m-refresh-minimum-interval.
	(w3m-refresh-at-time):
	Override meta refresh seconds by w3m-refresh-minimum-interval.
	(w3m-goto-url-with-timer): Check for buffer's existence correctly.

2015-05-10  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-error): Work for XEmacs.  [emacs-w3m:12444]
	(w3m-retrieve-and-render): Work for XEmacs.
	Note: `get-buffer-window' requires a buffer for the 1st arg in XEmacs.

2015-05-08  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-refresh-at-time):